# domain-modelling-with-haskell

./: .gitignore  README.md  domain-modelling.cabal  stack.yaml
src/: Database.hs  Demo.hs  PrettyPrint.hs  Project.hs  Reporting.hs
